--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     Styles.css
     The purpose of this file is the styling for the pages
 */
+
 nav, header, footer {
     display: block;
 }
@@ -73,6 +74,11 @@ article p {
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+
+
+footer.footerStyle a {
+    color: white;
+}
 
 /*Nav Bar*/
 
